blank white space fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+  width: 100%;
+}
 .App {
   text-align: center;
 }
